<resources>
    <string name="app_name">SpaceChucha</string>
    <string name="photo_of_the_day_stub">Picture of the day</string>
    <string name="search_wiki">Поиск</string>
    <string name="wiki_helper_text">Поиск в Википедии</string>
    <string name="settings">Настройки</string>
    <string name="favourite">Избранное</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="today">Сегодня</string>
    <string name="day_before_yesterday">Позавчера</string>
    <string name="yesterday">Вчера</string>
    <string name="theme">Тема</string>
    <string name="mars">Марс</string>
    <string name="moon">Луна</string>
    <string name="cancel">Отмена</string>
    <string name="ok">Ok</string>
    <string name="choose_theme">Выберите тему</string>
    <string name="picture_of_the_day">Фото дня</string>
    <string name="earth">Земля</string>
    <string name="change_date">Поменять дату</string>
    <string name="newear_moon_photo">Самое свежее фото Луны</string>
    <string name="fun_facts">Занимательные факты</string>
    <string name="fun">Fun</string>
    <string name="notes">Заметки</string>
    <string name="space_note">Космическая заметка</string>
    <string name="astronomy_note">Звёздная заметка</string>
    <string name="search_in_notes">Поиск по заметкам</string>
    <string name="only_favourites">Только избранные</string>
</resources>